2003-02-10  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* dumped-lisp.el (preloaded-file-list): Add
	"u02980-Miscellaneous-Mathematical-Symbols-B",
	"u02900-Supplemental-Arrows-B" and
	"u031F0-Katakana-Phonetic-Extensions" when `utf-2000' is provided.

2003-02-05  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el (=ucs-jis-1990): New coded-charset for
	UTF-2000.
	(=ucs-jis-2000): New coded-charset for UTF-2000.

2003-01-05  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-conf.el: Add new coded-charset when UTF-2000 [was a
	builtin coded-charset].

2002-12-18  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-conf.el (ideograph-gt-k): New coded-charset in
	UTF-2000.
	(ideograph-gt-pj-k1): Likewise.
	(ideograph-gt-pj-k2): Likewise.

2002-11-29  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list): Add
	`=jis-x0208'.

2002-11-29  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-conf.el (china3-jef): Add new coded-charset when
	UTF-2000 [was a builtin coded-charset].

2002-10-02  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-coding.el (coded-charset-entity-reference-alist): Add
	setting for JIS X 0213.

2002-07-23  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/japanese.el (euc-jisx0213): New coding-system.

	* mule/mule-conf.el (japanese-jisx0213-1): Specify
	`japanese-jisx0208-1990' as the mother.

2002-07-18  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* dumped-lisp.el (preloaded-file-list): Add "u0A490-Yi-Radicals"
	in UTF-2000.

2002-07-05  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* mule/mule-coding.el (utf-8-er): New coding-system in UTF-2000;
	setup `coded-charset-entity-reference-alist'.

2002-04-12  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list): Add
	`chinese-big5-eten-a' and `chinese-big5-eten-b'.
